--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="#" class="special1">Home</a>
             </div>
             <div class="col">
-              <a href="#about" class="scroll">About</a>
+              <a href="#about" class="scroll">About us</a>
             </div>
             <div class="col">
               <a href="#letest-game">Latest Games</a>
