--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav class="nav-content">
           <div class="row">
             <div class="col">
-              <a href="#" class="special1">Home</a>
+              <a href="#" class="special1">Some</a>
             </div>
             <div class="col">
               <a href="#about" class="scroll">About us</a>
